# stackdll

./: LICENSE  README.md  StackDll.def  stackdll.cabal
src/: Main.hs  StackDll.hs
