name:                stackdll
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/derrickturk/stackdll#readme
license:             BSD3
license-file:        LICENSE
author:              Derrick W. Turk
maintainer:          dwt@terminusdatascience.com
copyright:           dwt | terminus data science, LLC
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

foreign-library stackdll
  type: native-shared
  if os(Windows)
    options: standalone
    mod-def-file: StackDll.def
  hs-source-dirs:      src
  other-modules:       StackDll
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options: -O2 -Wall
